force-app/main/default/objects/Manifiesto_Exportacion__c/fields/Cantidad_de_Guias__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Guias__c</fullName>
    <label>Cantidad de Guías</label>
    <summaryForeignKey>Detalle_Manifiesto_Exportacion__c.Manifiesto_Interno__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>