force-app/main/default/objects/Manifiesto_Exportacion__c/fields/Fecha_Vuelo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vuelo__c</fullName>
    <label>Fecha Vuelo</label>
    <type>Date</type>
</CustomField>