force-app/main/default/objects/Manifiesto_Exportacion__c/fields/Linea_Aerea__c.field-meta.xml
<CustomField>
    <fullName>Linea_Aerea__c</fullName>
    <label>Línea Aérea</label>
    <length>10</length>
    <type>Text</type>
</CustomField>