force-app/main/default/objects/Manifiesto_Exportacion__c/fields/MAWB__c.field-meta.xml
<CustomField>
    <fullName>MAWB__c</fullName>
    <label>MAWB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>