force-app/main/default/objects/Manifiesto_Exportacion__c/fields/Peso_Total__c.field-meta.xml
<CustomField>
    <fullName>Peso_Total__c</fullName>
    <label>Peso Total</label>
    <summarizedField>Detalle_Manifiesto_Exportacion__c.Peso__c</summarizedField>
    <summaryForeignKey>Detalle_Manifiesto_Exportacion__c.Manifiesto_Interno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>