force-app/main/default/objects/Manifiesto_Exportacion__c/fields/Piezas_Totales__c.field-meta.xml
<CustomField>
    <fullName>Piezas_Totales__c</fullName>
    <label>Piezas Totales</label>
    <summarizedField>Detalle_Manifiesto_Exportacion__c.Piezas__c</summarizedField>
    <summaryForeignKey>Detalle_Manifiesto_Exportacion__c.Manifiesto_Interno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>