force-app/main/default/objects/Manifiesto_Exportacion__c/fields/Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total__c</fullName>
    <label>Valor Total</label>
    <summarizedField>Detalle_Manifiesto_Exportacion__c.Valor__c</summarizedField>
    <summaryForeignKey>Detalle_Manifiesto_Exportacion__c.Manifiesto_Interno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>